--- a/scss/_bloks/_header.scss
+++ b/scss/_bloks/_header.scss
@@ -35,4 +35,75 @@
     background-color: $yellow;
     cursor: pointer;
   }
+  &__logo--img {
+    margin: 0;
+    padding: 0;
+  }
+  &__menu {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    display: none;
+    width: 30px;
+    height: 26px;
+    background-image: url(.././img/menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .header {
+    &__container {
+      max-width: 1024px;
+      padding-left: 50px;
+      padding-right: 40px;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .header {
+    &__container {
+      max-width: 768px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+    &__btn {
+      padding: 10px 30px;
+      font-size: 12px;
+      line-height: 20px;
+    }
+  }
+}
+@media only screen and (max-width: 700px) {
+  .header {
+    &_container {
+      max-width: 700px;
+    }
+    &__box {
+      width: 100%;
+    }
+    &__logo {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    &__logo--img {
+      width: 76px;
+      height: 20px;
+    }
+    &__nav {
+      display: none;
+    }
+    &__btn {
+      display: none;
+    }
+    &__menu {
+      display: block;
+      width: 20px;
+      height: 16px;
+    }
+  }
 }
