--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,10 @@ a {
   font-size: 15px;
   line-height: 25px;
   color: #939caa;
+  transition: all 0.3s ease;
+}
+.header__link:hover {
+  color: #000;
 }
 .header__btn {
   padding: 14px 39px;
@@ -416,6 +420,14 @@ a {
   border: none;
   background-color: #fcb72b;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.header__btn:hover {
+  box-shadow: 0 0 5px 0 #fcb72b;
+}
+.header__logo:hover {
+  transition: all 0.3 ease;
+  opacity: 0.8;
 }
 .header__logo--img {
   margin: 0;
@@ -530,6 +542,10 @@ a {
   background-color: #fcb72b;
   border: none;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.intro__btn:hover {
+  box-shadow: 0 0 5px 0 #fcb72b;
 }
 .intro__decoration {
   position: absolute;
@@ -930,6 +946,10 @@ a {
   background-color: #fcb72b;
   border: none;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+.benefist__btn:hover {
+  box-shadow: 0 0 5px 0 #fcb72b;
 }
 
 @media only screen and (max-width: 1300px) {
@@ -1072,6 +1092,12 @@ a {
   align-items: center;
   gap: 18px;
 }
+.registration__link {
+  transition: all 0.3s ease;
+}
+.registration__link:hover {
+  box-shadow: 0 0 8px 0 #000;
+}
 
 @media only screen and (max-width: 1300px) {
   .registration__container {
@@ -1137,11 +1163,27 @@ a {
   align-items: center;
   gap: 32px;
 }
+.footer__item {
+  width: 24px;
+  height: 24px;
+}
+.footer__link {
+  width: 24px;
+  height: 24px;
+  transition: all 0.3s ease;
+}
+.footer__link:hover {
+  opacity: 0.7;
+}
 .footer__box--link {
   font-weight: 700;
   font-size: 15px;
   line-height: 25px;
   color: #939caa;
+  transition: all 0.3s ease;
+}
+.footer__box--link:hover {
+  color: #000;
 }
 .footer__list {
   margin: 0;
@@ -1150,4 +1192,39 @@ a {
   display: flex;
   align-items: center;
   gap: 24px;
+}
+.footer__logo {
+  transition: all 0.3s ease;
+}
+.footer__logo :hover {
+  opacity: 0.8;
+}
+.footer__svg {
+  width: 24px;
+  height: 24px;
+  fill: #fcb72b;
+}
+
+@media only screen and (max-width: 1024px) {
+  .footer__container {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .footer__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__box {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 80px;
+  }
+  .footer__box--list {
+    flex-direction: column;
+    align-items: center;
+  }
 }/*# sourceMappingURL=styles.css.map */
