--- a/scss/_bloks/_benefist.scss
+++ b/scss/_bloks/_benefist.scss
@@ -99,6 +99,10 @@
     background-color: $yellow;
     border: none;
     cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  &__btn:hover {
+    box-shadow: 0 0 5px 0 $yellow;
   }
 }
 @media only screen and (max-width: 1300px) {
