--- a/scss/_bloks/_footer.scss
+++ b/scss/_bloks/_footer.scss
@@ -18,16 +18,70 @@
     align-items: center;
     gap: 32px;
   }
+  &__item {
+    width: 24px;
+    height: 24px;
+  }
+  &__link {
+    width: 24px;
+    height: 24px;
+    transition: all 0.3s ease;
+  }
+  &__link:hover {
+    opacity: 0.7;
+  }
   &__box--link {
     font-weight: 700;
     font-size: 15px;
     line-height: 25px;
     color: $dim-grey;
+    transition: all 0.3s ease;
+  }
+  &__box--link:hover {
+    color: #000;
   }
   &__list {
     @include reset-list;
     display: flex;
     align-items: center;
     gap: 24px;
+  }
+  &__logo {
+    transition: all 0.3s ease;
+    :hover {
+      opacity: 0.8;
+    }
+  }
+  &__svg {
+    width: 24px;
+    height: 24px;
+    fill: $yellow;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .footer {
+    &__container {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+}
+@media only screen and (max-width: 750px) {
+  .footer {
+    &__container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    &__box {
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 80px;
+    }
+    &__box--list {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
