--- a/scss/_bloks/_intro.scss
+++ b/scss/_bloks/_intro.scss
@@ -46,6 +46,10 @@
     background-color: $yellow;
     border: none;
     cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  &__btn:hover {
+    box-shadow: 0 0 5px 0 $yellow;
   }
   &__decoration {
     position: absolute;
