--- a/scss/_bloks/_registration.scss
+++ b/scss/_bloks/_registration.scss
@@ -25,6 +25,12 @@
     align-items: center;
     gap: 18px;
   }
+  &__link {
+    transition: all 0.3s ease;
+  }
+  &__link:hover {
+    box-shadow: 0 0 8px 0 #000;
+  }
 }
 @media only screen and (max-width: 1300px) {
   .registration {
